--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,8 +1,8 @@
 <template name="home">
 
-  <div class="view home">
+  <div class="home view">
     {{> header}}
-    <main class="home-main">
+    <main class="ui stackable home-main page grid">
       {{#each sections}}
         {{> homeSection}}
       {{/each}}
