--- a/client/views/home/sections/home_section.html
+++ b/client/views/home/sections/home_section.html
@@ -1,13 +1,13 @@
 <template name="homeSection">
-  <section class="home-section">
-    <div class="center aligned view-title">
+  <section class="home-section row">
+    <div class="center aligned view-title column">
       <h2 class="huge center aligned ui header">
         {{#each header}}
           <span>{{copy}}</span>
         {{/each}}
       </h2>
     </div>
-    <div class="ui stackable page section-content grid" id="{{template}}">
+    <div class="section-content column" id="{{template}}">
       {{> UI.dynamic template=template}}
     </div>
   </section>
