--- a/client/views/home/sections/mission/mission_block.html
+++ b/client/views/home/sections/mission/mission_block.html
@@ -1,5 +1,5 @@
 <template name="missionBlock">
-  <section class="block column">
+  <section class="block">
     <div class="ui two column stackable grid">
       <div class="middle aligned row">
         <div class="column">
