--- a/client/views/common/topbar.html
+++ b/client/views/common/topbar.html
@@ -4,8 +4,8 @@
       <b>+P</b>
     </div>
     <div class="right menu">
-      <a class="popup icon sidebar item">
-        <i class="alternate sidebar icon"></i>
+      <a class="popup icon github item">
+        <i class="alternate github icon"></i>
       </a>
     </div>
   </div>
