--- a/client/views/home/sections/home_section.html
+++ b/client/views/home/sections/home_section.html
@@ -1,5 +1,5 @@
 <template name="homeSection">
-  <section class="home-section row">
+  <section class="home-section one column row">
     <div class="center aligned view-title column">
       <h2 class="huge center aligned ui header">
         {{#each header}}
