styles for home section headers

--- a/client/views/common/topbar.html
+++ b/client/views/common/topbar.html
@@ -1,5 +1,5 @@
 <template name="topbar">
-  <div class="ui fixed inverted main menu">
+  <div class="ui fixed inverted main topbar menu">
     <div class="title item">
       <b>+P</b>
     </div>
