--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -1,10 +1,10 @@
 <template name="footer">
-  <footer class="center aligned {{isActive}} header-wrapper">
-    <h1 class="huge center aligned ui header">
+  <footer class="center aligned {{isActive}} footer-wrapper">
+    <h1 class="huge center aligned ui footer">
       Do you want more traffic?
-      <div class="sub header">
+      <small>
         Looks like a business in Astoria, New York needs our attention! Is this you?
-      </div>
+      </small>
     </h1>
     <button class="basic ui resize icon button"><i class="{{iconClass}} icon"></i></button>
     {{#if showLogin}}
