--- a/client/views/home/header/header.html
+++ b/client/views/home/header/header.html
@@ -2,9 +2,9 @@
   <header class="center aligned header-wrapper">
     <h1 class="huge center aligned ui header">
       {{constant 'name'}}
-      <div class="sub header">
+      <small>
         Building meaningful software, together.
-      </div>
+      </small>
     </h1>
   </header>
 </template>
