--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -2,7 +2,7 @@
 
   <div class="home view">
     {{> header}}
-    <main class="ui stackable home-main page grid">
+    <main class="ui stackable home-main grid">
       {{#each sections}}
         {{> homeSection}}
       {{/each}}
