--- a/client/views/home/sections/mission/mission.html
+++ b/client/views/home/sections/mission/mission.html
@@ -1,5 +1,5 @@
 <template name="mission">
-  <div class="middle aligned mission header">
+  <div class="ui mission page header grid">
     <div class="column">
       <h2>
         <span class="label">{{content.label}}</span>
