--- a/client/views/home/sections/mission/mission_block.html
+++ b/client/views/home/sections/mission/mission_block.html
@@ -1,6 +1,6 @@
 <template name="missionBlock">
   <section class="block">
-    <div class="ui two column stackable grid">
+    <div class="ui two column stackable page grid">
       <div class="middle aligned row">
         <div class="column">
           <h3 class="large ui header">
