--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -5,50 +5,91 @@
 
   .home.view {
     overflow: hidden;
+
+    /* header */
+    .header-wrapper {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 100vh;
+      background: #09050D;
+
+      .header {
+        padding: 40vh 4%;
+        color: #ff995e;
+        text-transform: uppercase;
+
+        > small {
+          display: block;
+          color: #feeb7f;
+          font-size: 28%;
+          font-weight: normal;
+          text-transform: none;
+        }
+      }
+    }
+
+    /* main */
+    .home-main {
+      position: relative;
+      z-index: 2;
+      margin-top: 100vh;
+      background: #fff;
+
+      .home-section {
+
+        .view-title {
+          padding: 0 1em !important;
+          background: #3fb094;
+          text-transform: uppercase;
+          box-shadow: inset 0px 10px 10px -10px rgba(22, 22, 22, 0.8) ,
+                      inset 0px -10px 10px -10px rgba(22, 22, 22, 0.8) !important;
+
+          .header {
+            padding: 1em 0;
+            color: #fff;
+            font-family: 'Ubuntu', sans-serif;
+
+            >span {
+              display: block;
+            }
+          }
+        }
+
+        .view-title:first-child {
+          box-shadow: 0px -10px 10px -10px rgba(22, 22, 22, 0.8) ,
+          inset 0px -10px 10px -10px rgba(22, 22, 22, 0.8) !important;
+
+          >span:last-child {
+            color: #feeb7f;
+          }
+        }
+      }
+    }
+
+    /* footer */
+    .footer-wrapper {
+      position: relative;
+      z-index: 2;
+      height: 100vh;
+      background: #09050D;
+
+      .footer {
+        margin: 0;
+        padding: 25vh 4% 8%;
+        color: #ff995e;
+        font-size: 1.2em;
+
+        > small {
+          display: block;
+          margin-top: 8%;
+          color: #feeb7f;
+          font-size: 65%;
+        }
+      }
+    }
   }
-    .boilerplate-feature.icon {
-        margin-top: 10px;
-        transition: 0.7s color;
 
-        &:hover {
-            color: @primaryIconColor;
-        }
-
-        &.hover-orange.html5:hover {
-            color: @html5Orange;
-        }
-    }
-
-    .features.grid {
-        width: 100%;
-        margin: 0%;
-        margin-top: 30px;
-    }
-
-    .main-content > .ui.two.column.grid {
-        padding-top: 20px;
-    }
-
-    .column > .icon-wrapper {
-        font-size: 2em;
-        color: @primaryIconColor;
-    }
-
-    @media (max-width: @largeDesktopWidth) {
-        .column > .icon-wrapper {
-            font-size: 1.5em;
-        }
-    }
-
-    @media (max-width: @mediumDesktopWidth) {
-        .column > .icon-wrapper {
-            font-size: 1em;
-        }
-    }
-
-    @media (max-width: @tabletWidth) {
-        .features.grid .headline {
-            display: none;
-        }
-    }
 }
