--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -52,17 +52,28 @@
             color: #fff;
             font-family: 'Ubuntu', sans-serif;
 
-            >span {
+            span {
               display: block;
+            }
+
+            span:nth-child(2) {
+              color: #feeb7f;
             }
           }
         }
+      }
 
-        .view-title:first-child {
+      .home-section:nth-child(1) {
+
+        .view-title {
           box-shadow: 0px -10px 10px -10px rgba(22, 22, 22, 0.8) ,
           inset 0px -10px 10px -10px rgba(22, 22, 22, 0.8) !important;
 
-          >span:last-child {
+          span:nth-child(2) {
+            color: #fff;  
+          }
+
+          span:nth-child(3) {
             color: #feeb7f;
           }
         }
