styles applied to home mission section

--- a/client/stylesheets/variables.less
+++ b/client/stylesheets/variables.less
@@ -2,12 +2,17 @@
 
 @primaryLinkHoverColor: #682d71;
 @secondaryLinkHoverColor: #bd6ddb;
-@primaryFontColor: #1f1f1f;
-@secondaryFontColor: #f6eff4;
+@primaryFontColor: #09050D;
+@secondaryFontColor: #fff;
 @secondaryFontColorVariation: #DDDDDD;
-@primaryIconColor: #1b3fc3;
+@primaryHeaderColor: #ff995e;
+@secondaryHeaderColor: #feeb7f;
+@highlightFontColor: #3fb094;
+@primaryIconColor: #ff995e;
 
-@html5Orange: #F06529;
+@voidBackground: #09050D;
+@contentBackground: #fff;
+@labelBackground: #feeb7f;
 
 // Width variables
 @largeDesktopWidth: 1280px;
@@ -15,4 +20,4 @@
 @tabletWidth: 768px;
 @phoneWidth: 480px;
 
-@loginFormWidth: 500px;
+@loginFormWidth: 80%;
