--- a/client/views/home/sections/contact/contact.html
+++ b/client/views/home/sections/contact/contact.html
@@ -1,9 +1,7 @@
 <template name="contact">
   <div class="ui contact page header grid">
     <div class="column">
-      <h2>
-        <span class="label">{{content.label}}</span>
-      </h2>
+      <h2 class="label">{{content.label}}</h2>
       <p><strong>{{content.intro}}</strong> {{content.hook}}</p>
     </div>
   </div>
