--- a/client/views/home/sections/heroes/heroes.html
+++ b/client/views/home/sections/heroes/heroes.html
@@ -1,9 +1,7 @@
 <template name="heroes">
   <div class="ui heroes page header grid">
     <div class="column">
-      <h2>
-        <span class="label">{{content.label}}</span>
-      </h2>
+      <h2 class="label">{{content.label}}</h2>
       <p><strong>{{content.intro}}</strong></p>
     </div>
   </div>
