--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -14,16 +14,16 @@
       z-index: 1;
       width: 100%;
       height: 100vh;
-      background: #09050D;
+      background: @voidBackground;
 
       .header {
         padding: 40vh 4%;
-        color: #ff995e;
+        color: @primaryHeaderColor;
         text-transform: uppercase;
 
         > small {
           display: block;
-          color: #feeb7f;
+          color: @secondaryHeaderColor;
           font-size: 28%;
           font-weight: normal;
           text-transform: none;
@@ -36,7 +36,7 @@
       position: relative;
       z-index: 2;
       margin-top: 100vh;
-      background: #fff;
+      background: @contentBackground;
 
       .home-section {
 
@@ -49,7 +49,7 @@
 
           .header {
             padding: 1em 0;
-            color: #fff;
+            color: @secondaryFontColor;
             font-family: 'Ubuntu', sans-serif;
 
             span {
@@ -58,6 +58,80 @@
 
             span:nth-child(2) {
               color: #feeb7f;
+            }
+          }
+        }
+
+        .section-content {
+
+          .header {
+
+            .label {
+              display: inline-block;
+              background: @labelBackground;
+              padding: .5em;
+              font-size: 1.2em;
+              text-transform: uppercase;
+              border: 5px solid;
+            }
+
+            p {
+              font-size: 1.25em;
+              font-weight: 300;
+            }
+          }
+
+          .content {
+
+            .block {
+              padding: 4% !important;
+
+              .header {
+                text-align: center;
+              }
+
+              .icon-wrapper {
+                i.fa {
+                  font-size: 10em;
+                }
+              }
+
+              p {
+                font-size: 1.25em;
+              }
+            }
+
+          }
+
+          .mission.content {
+
+            .block:nth-child(2) {
+
+              .center.aligned.column {
+                float: left;
+              }
+            }
+          }
+
+          @media (min-width: @tabletWidth) {
+            .content {
+
+              .block {
+                padding: 4% !important;
+
+                .header {
+                  text-align: left;
+                }
+              }
+            }
+          }
+
+          @media (max-width: @phoneWidth) {
+            .content {
+
+              .block {
+                padding: 0 !important;
+              }
             }
           }
         }
@@ -70,11 +144,26 @@
           inset 0px -10px 10px -10px rgba(22, 22, 22, 0.8) !important;
 
           span:nth-child(2) {
-            color: #fff;  
+            color: @secondaryFontColor;
           }
 
           span:nth-child(3) {
-            color: #feeb7f;
+            color: @secondaryHeaderColor;
+          }
+        }
+      }
+
+      .home-section:nth-child(2) {
+
+        .view-title {
+          background: @labelBackground;
+
+          .header {
+            color: @primaryHeaderColor;
+
+            span:nth-child(2) {
+              color: @highlightFontColor;
+            }
           }
         }
       }
@@ -85,7 +174,7 @@
       position: relative;
       z-index: 2;
       height: 100vh;
-      background: #09050D;
+      background: @voidBackground;
 
       .footer {
         margin: 0;
