--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -8,33 +8,29 @@
    ------------------- */
 
 body, .layout {
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    color: @primaryFontColor;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0 auto;
+  padding: 0;
+  overflow-x: hidden;
+  color: @primaryFontColor;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
-    color: inherit;
-    transition: 0.3s color;
+  color: inherit;
+  transition: 0.3s color;
 
-    &:hover {
-        color: @primaryLinkHoverColor;
-    }
+  &:hover {
+    color: @primaryLinkHoverColor;
+  }
 }
 
 .icon {
-    &.orange {
-        color: @html5Orange;
-    }
-}
-
-.ui.header {
-    font-family: 'Montserrat', sans-serif;
+  &.orange {
+    color: @primaryIconColor;
+  }
 }
 
 .site-wrapper {
-    margin: 0 auto;
-    max-width: @largeDesktopWidth;
+  margin: 0 auto;
+  max-width: @largeDesktopWidth;
 }
