tweaked styles for contact and heroes sections

--- a/client/views/home/sections/contact/contact_block.html
+++ b/client/views/home/sections/contact/contact_block.html
@@ -1,7 +1,7 @@
 <template name="contactBlock">
   <div class="block column">
-    <div class="ui icon header">
+    <a class="ui icon header" href="{{url}}">
       <i class="{{icon}}"></i>
-    </div>
+    </a>
   </div>
 </template>
