--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -41,6 +41,7 @@
       .home-section {
 
         .view-title {
+          margin: 0 !important;
           padding: 0 1em !important;
           background: #3fb094;
           text-transform: uppercase;
@@ -63,6 +64,7 @@
         }
 
         .section-content {
+          padding: 2em 0 3em!important;
 
           .header {
 
@@ -104,8 +106,18 @@
               p {
                 font-size: 1.25em;
               }
-            }
 
+              .card {
+                cursor: pointer;
+              }
+
+              .icon.header {
+                width: 100%;
+                color: #FF995E;
+                font-size: 2em;
+                text-align: center;
+              }
+            }
           }
 
           .mission.content {
@@ -119,6 +131,16 @@
           }
 
           @media (min-width: @mediumDesktopWidth) {
+            .content {
+
+              .block {
+
+                .icon.header {
+                  font-size: 3em;
+                }
+              }
+            }
+
             .heroes.content {
 
               .block {
@@ -146,25 +168,59 @@
                       transition: all 150ms ease-out;
                     }
                   }
+
+                  .content {
+                    display: none;
+                    transition: all 150ms ease-out;
+
+                    .header {
+                      text-align: center;
+
+                      small {
+                        display: block;
+                        font-weight: 300;
+                      }
+                    }
+                  }
                 }
 
                 .card:hover,
                 .card:focus {
+                  position: relative;
                   bottom: 20px;
                   right: 10px;
 
-                  .avatar,
-                  .avatar {
-                    width: 95%;
-                    border: #3f324d inset 6px;
-                    filter: none;
-                    -webkit-filter: grayscale(0);
-                    -webkit-box-shadow: -10px 15px 10px -10px #000000;
-                    -moz-box-shadow: -10px 15px 10px -10px #000000;
-                    box-shadow: -10px 15px 10px -10px #000000;
+                  .image {
+
+                    .avatar {
+                      width: 95%;
+                      border: #3f324d inset 6px;
+                      filter: none;
+                      -webkit-filter: grayscale(0);
+                      -webkit-box-shadow: -10px 15px 10px -10px #000;
+                      -moz-box-shadow: -10px 15px 10px -10px #000;
+                      box-shadow: -10px 15px 10px -10px #000;
+                      transition: all 150ms ease-out;
+                    }
+                  }
+
+                  .content {
+                    display: block;
+                    position: absolute;
+                    bottom: 11px;
+                    left: 11px;
+                    width: 93%;
+                    background: rgba(254, 235, 127, 0.9);
+                    border-top: 6px solid;
                     transition: all 150ms ease-out;
                   }
                 }
+              }
+            }
+
+            .contact.content {
+              .page.grid {
+                padding: 0 16%;
               }
             }
           }
@@ -177,6 +233,125 @@
 
                 .header {
                   text-align: left;
+                }
+
+                .icon.header {
+                  font-size: 3em;
+                }
+              }
+            }
+
+            .heroes.content {
+
+              .block {
+                padding: 0 !important;
+
+                .card {
+                  padding: 5px;
+                  transform: skew(-5deg);
+                  -o-transform: skew(-5deg);
+                  -moz-transform: skew(-5deg);
+                  -webkit-transform: skew(-5deg);
+                  -webkit-backface-visibility: hidden;
+
+                  .image {
+
+                    .avatar {
+                      width: 90%;
+                      border: 3px inset @primaryFontColor;
+                      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+                      filter: gray;
+                      -webkit-filter: grayscale(.9);
+                      -moz-box-shadow: -5px 5px 10px -5px #000;
+                      -webkit-box-shadow: -5px 5px 10px -5px #000;
+                      box-shadow: -5px 5px 10px -5px #000;
+                      transition: all 150ms ease-out;
+                    }
+                  }
+
+                  .content {
+                    display: none;
+
+                    .header {
+                      text-align: center;
+
+                      small {
+                        display: block;
+                        font-weight: 300;
+                      }
+                    }
+                  }
+                }
+
+                .card:hover,
+                .card:focus {
+                  position: relative;
+                  bottom: 20px;
+                  right: 10px;
+
+                  .image {
+
+                    .avatar {
+                      width: 95%;
+                      border: #3f324d inset 6px;
+                      filter: none;
+                      -webkit-filter: grayscale(0);
+                      -webkit-box-shadow: -10px 15px 10px -10px #000;
+                      -moz-box-shadow: -10px 15px 10px -10px #000;
+                      box-shadow: -10px 15px 10px -10px #000;
+                      transition: all 150ms ease-out;
+                    }
+                  }
+
+                  .content {
+                    display: block;
+                    position: absolute;
+                    bottom: 11px;
+                    left: 11px;
+                    width: 92%;
+                    background: rgba(254, 235, 127, 0.9);
+                    border-top: 5px solid;
+                  }
+                }
+              }
+            }
+          }
+
+          @media (max-width: @tabletWidth) {
+            .heroes.content {
+
+              .block {
+                padding: 4% !important;
+
+                .card {
+                  border: 5px solid;
+                  -moz-box-shadow: 0 0 10px 0 #000;
+                  -webkit-box-shadow: 0 0 10px 0 #000;
+                  box-shadow: 0 0 10px 0 #000;
+
+                  .image {
+
+                    .avatar {
+                      width: 100%;
+                    }
+                  }
+
+                  .content {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    background: rgba(254, 235, 127, 0.9);
+                    border-top: 5px solid;
+
+                    .header {
+
+                      small {
+                        display: block;
+                        font-weight: 300;
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -197,9 +372,15 @@
 
                 .card {
                   border: 5px solid;
+                  -moz-box-shadow: 0 0 10px 0 #000;
+                  -webkit-box-shadow: 0 0 10px 0 #000;
+                  box-shadow: 0 0 10px 0 #000;
 
-                  .avatar {
-                    width: 100%;
+                  .image {
+
+                    .avatar {
+                      width: 100%;
+                    }
                   }
 
                   .content {
@@ -219,6 +400,13 @@
                     }
                   }
                 }
+              }
+            }
+
+            .contact.content {
+
+              .block {
+                width: 33.3333%;
               }
             }
           }
