--- a/client/views/home/sections/heroes/hero_block.html
+++ b/client/views/home/sections/heroes/hero_block.html
@@ -1,6 +1,6 @@
 <template name="heroBlock">
   <section class="block column">
-    <div class="ui fluid slide down instant reveal card">
+    <div class="ui fluid card">
       <div class="image">
         <img src="{{avatar.desktop}}" class="hidden-mobile avatar">
         <img src="{{avatar.mobile}}" class="visible-mobile avatar">
