--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -6,32 +6,6 @@
   .home.view {
     overflow: hidden;
 
-    /* header */
-    .header-wrapper {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 2;
-      width: 100%;
-      height: 100vh;
-      background: @voidBackground;
-
-      .header {
-        padding: 40vh 4%;
-        color: @primaryHeaderColor;
-        text-transform: uppercase;
-
-        > small {
-          display: block;
-          color: @secondaryHeaderColor;
-          font-size: 28%;
-          font-weight: normal;
-          text-transform: none;
-        }
-      }
-    }
-
-    /* main */
     .home-main {
       position: relative;
       z-index: 4;
@@ -129,103 +103,14 @@
               }
             }
           }
+        }
+      }
 
-          @media (min-width: @mediumDesktopWidth) {
-            .content {
+      @media (min-width: @tabletWidth) {
+        .home-section {
 
-              .block {
+          .section-content {
 
-                .icon.header {
-                  font-size: 3em;
-                }
-              }
-            }
-
-            .heroes.content {
-
-              .block {
-                padding: 0 !important;
-
-                .card {
-                  padding: 5px;
-                  transform: skew(-5deg);
-                  -o-transform: skew(-5deg);
-                  -moz-transform: skew(-5deg);
-                  -webkit-transform: skew(-5deg);
-                  -webkit-backface-visibility: hidden;
-
-                  .image {
-
-                    .avatar {
-                      width: 90%;
-                      border: 3px inset @primaryFontColor;
-                      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-                      filter: gray;
-                      -webkit-filter: grayscale(.9);
-                      -moz-box-shadow: -5px 5px 10px -5px #000;
-                      -webkit-box-shadow: -5px 5px 10px -5px #000;
-                      box-shadow: -5px 5px 10px -5px #000;
-                      transition: all 150ms ease-out;
-                    }
-                  }
-
-                  .content {
-                    display: none;
-                    transition: all 150ms ease-out;
-
-                    .header {
-                      text-align: center;
-
-                      small {
-                        display: block;
-                        font-weight: 300;
-                      }
-                    }
-                  }
-                }
-
-                .card:hover,
-                .card:focus {
-                  position: relative;
-                  bottom: 20px;
-                  right: 10px;
-
-                  .image {
-
-                    .avatar {
-                      width: 95%;
-                      border: #3f324d inset 6px;
-                      filter: none;
-                      -webkit-filter: grayscale(0);
-                      -webkit-box-shadow: -10px 15px 10px -10px #000;
-                      -moz-box-shadow: -10px 15px 10px -10px #000;
-                      box-shadow: -10px 15px 10px -10px #000;
-                      transition: all 150ms ease-out;
-                    }
-                  }
-
-                  .content {
-                    display: block;
-                    position: absolute;
-                    bottom: 11px;
-                    left: 11px;
-                    width: 93%;
-                    background: rgba(254, 235, 127, 0.9);
-                    border-top: 6px solid;
-                    transition: all 150ms ease-out;
-                  }
-                }
-              }
-            }
-
-            .contact.content {
-              .page.grid {
-                padding: 0 16%;
-              }
-            }
-          }
-
-          @media (min-width: @tabletWidth) {
             .content {
 
               .block {
@@ -307,8 +192,8 @@
                     display: block;
                     position: absolute;
                     bottom: 11px;
-                    left: 11px;
-                    width: 92%;
+                    left: 10px;
+                    width: 91%;
                     background: rgba(254, 235, 127, 0.9);
                     border-top: 5px solid;
                   }
@@ -316,48 +201,58 @@
               }
             }
           }
+        }
+      }
 
-          @media (max-width: @tabletWidth) {
+      @media (min-width: @mediumDesktopWidth) {
+        .home-section {
+
+          .section-content {
+
             .heroes.content {
 
               .block {
-                padding: 4% !important;
 
-                .card {
-                  border: 5px solid;
-                  -moz-box-shadow: 0 0 10px 0 #000;
-                  -webkit-box-shadow: 0 0 10px 0 #000;
-                  box-shadow: 0 0 10px 0 #000;
-
-                  .image {
-
-                    .avatar {
-                      width: 100%;
-                    }
-                  }
+                .card:hover,
+                .card:focus {
 
                   .content {
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    width: 100%;
-                    background: rgba(254, 235, 127, 0.9);
-                    border-top: 5px solid;
-
-                    .header {
-
-                      small {
-                        display: block;
-                        font-weight: 300;
-                      }
-                    }
+                    width: 92%;
                   }
                 }
               }
             }
           }
+        }
+      }
 
-          @media (max-width: @phoneWidth) {
+      @media (min-width: @largeDesktopWidth) {
+        .home-section {
+
+          .section-content {
+
+            .heroes.content {
+
+              .block {
+
+                .card:hover,
+                .card:focus {
+
+                  .content {
+                    width: 93%;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      @media (max-width: @phoneWidth) {
+        .home-section {
+
+          .section-content {
+
             .content {
 
               .block {
@@ -384,14 +279,16 @@
                   }
 
                   .content {
-                    position: absolute;
+                    position: relative;
                     bottom: 0;
                     left: 0;
                     width: 100%;
-                    background: rgba(254, 235, 127, 0.9);
+                    background: @labelBackground;
                     border-top: 5px solid;
 
                     .header {
+                      margin: 0;
+                      padding: 1em;
 
                       small {
                         display: block;
@@ -407,6 +304,54 @@
 
               .block {
                 width: 33.3333%;
+              }
+            }
+          }
+        }
+      }
+
+      @media (min-width: @phoneWidth) and (max-width: @tabletWidth) {
+        .home-section {
+
+          .section-content {
+
+            .heroes.content {
+
+              .block {
+                padding: 4% !important;
+
+                .card {
+                  border: 5px solid;
+                  -moz-box-shadow: 0 0 10px 0 #000;
+                  -webkit-box-shadow: 0 0 10px 0 #000;
+                  box-shadow: 0 0 10px 0 #000;
+
+                  .image {
+
+                    .avatar {
+                      width: 100%;
+                    }
+                  }
+
+                  .content {
+                    position: relative;
+                    bottom: 0;
+                    left: 0;
+                    width: 100%;
+                    background: @labelBackground;
+                    border-top: 5px solid;
+
+                    .header {
+                      margin: 0;
+                      padding: 1em;
+
+                      small {
+                        display: block;
+                        font-weight: 300;
+                      }
+                    }
+                  }
+                }
               }
             }
           }
@@ -443,40 +388,6 @@
           }
         }
       }
-    }
-
-    /* footer */
-    .footer-wrapper {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      width: 100%;
-      height: 100vh;
-      background: @voidBackground;
-
-      .footer {
-        margin: 0;
-        padding: 20vh 4% 4%;
-        color: #ff995e;
-        font-size: 1.2em;
-
-        > small {
-          display: block;
-          margin-top: 4%;
-          color: #feeb7f;
-          font-size: 65%;
-        }
-      }
-    }
-  }
-
-}
-
-.layout.scrolled {
-  .home.view {
-    .footer-wrapper {
-      z-index: 3;
     }
   }
 }
