polished responsive styles for home sections

--- a/client/views/home/sections/heroes/heroes.html
+++ b/client/views/home/sections/heroes/heroes.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="heroes content">
-    <div class="ui stackable page grid">
+    <div class="ui page grid">
       <div class="four column row">
         {{#each content.blocks}}
           {{> heroBlock}}
