--- a/client/stylesheets/footer.less
+++ b/client/stylesheets/footer.less
@@ -10,7 +10,7 @@
   height: 100vh;
   background: @voidBackground;
 
-  .footer {
+  .huge.ui.footer {
     margin: 0;
     padding: 20vh 4% 4%;
     color: #ff995e;
@@ -21,6 +21,36 @@
       margin-top: 4%;
       color: #feeb7f;
       font-size: 65%;
+    }
+  }
+
+  @media (min-width: @tabletWidth) {
+    .huge.ui.footer {
+      font-size: 3em;
+      padding: 15vh 4%;
+    }
+  }
+  @media (min-width: @mediumDesktopWidth) {
+    .huge.ui.footer {
+      font-size: 3.5em;
+    }
+  }
+
+  @media (min-width: @largeDesktopWidth) {
+    
+  }
+
+  @media (max-width: @phoneWidth) {
+    .huge.ui.footer {
+      font-size: 1.2em;
+      padding: 20vh 4%;
+    }
+  }
+
+  @media (min-width: @phoneWidth) and (max-width: @tabletWidth) {
+    .huge.ui.footer {
+      font-size: 2.5em;
+      padding: 20vh 4%;
     }
   }
 }
