--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -46,7 +46,7 @@
               display: inline-block;
               background: @labelBackground;
               padding: .5em;
-              font-size: 1.2em;
+              font-size: 1.25em;
               text-transform: uppercase;
               border: 5px solid;
             }
@@ -109,6 +109,13 @@
       @media (min-width: @tabletWidth) {
         .home-section {
 
+          .view-title {
+
+            .header {
+              font-size: 2.5em;
+            }
+          }
+
           .section-content {
 
             .content {
@@ -128,74 +135,78 @@
 
             .heroes.content {
 
-              .block {
-                padding: 0 !important;
+              .ui.page.grid {
+                padding: 0 8%;
 
-                .card {
-                  padding: 5px;
-                  transform: skew(-5deg);
-                  -o-transform: skew(-5deg);
-                  -moz-transform: skew(-5deg);
-                  -webkit-transform: skew(-5deg);
-                  -webkit-backface-visibility: hidden;
+                .block {
+                  padding: 0 !important;
 
-                  .image {
+                  .card {
+                    padding: 5px;
+                    transform: skew(-5deg);
+                    -o-transform: skew(-5deg);
+                    -moz-transform: skew(-5deg);
+                    -webkit-transform: skew(-5deg);
+                    -webkit-backface-visibility: hidden;
 
-                    .avatar {
-                      width: 90%;
-                      border: 3px inset @primaryFontColor;
-                      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-                      filter: gray;
-                      -webkit-filter: grayscale(.9);
-                      -moz-box-shadow: -5px 5px 10px -5px #000;
-                      -webkit-box-shadow: -5px 5px 10px -5px #000;
-                      box-shadow: -5px 5px 10px -5px #000;
-                      transition: all 150ms ease-out;
+                    .image {
+
+                      .avatar {
+                        width: 90%;
+                        border: 3px inset @primaryFontColor;
+                        filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+                        filter: gray;
+                        -webkit-filter: grayscale(.9);
+                        -moz-box-shadow: 5px 5px 10px -5px #000;
+                        -webkit-box-shadow: 5px 5px 10px -5px #000;
+                        box-shadow: 5px 5px 10px -5px #000;
+                        transition: all 150ms ease-out;
+                      }
                     }
-                  }
 
-                  .content {
-                    display: none;
+                    .content {
+                      display: none;
 
-                    .header {
-                      text-align: center;
+                      .header {
+                        text-align: center;
 
-                      small {
-                        display: block;
-                        font-weight: 300;
+                        small {
+                          display: block;
+                          font-weight: 300;
+                        }
                       }
                     }
                   }
-                }
 
-                .card:hover,
-                .card:focus {
-                  position: relative;
-                  bottom: 20px;
-                  right: 10px;
+                  .card:hover,
+                  .card:focus {
+                    position: relative;
+                    bottom: 20px;
+                    right: 10px;
 
-                  .image {
+                    .image {
 
-                    .avatar {
-                      width: 95%;
-                      border: #3f324d inset 6px;
-                      filter: none;
-                      -webkit-filter: grayscale(0);
-                      -webkit-box-shadow: -10px 15px 10px -10px #000;
-                      -moz-box-shadow: -10px 15px 10px -10px #000;
-                      box-shadow: -10px 15px 10px -10px #000;
-                      transition: all 150ms ease-out;
+                      .avatar {
+                        width: 95%;
+                        border: #3f324d inset 6px;
+                        filter: none;
+                        -webkit-filter: grayscale(0);
+                        -webkit-box-shadow: 20px 20px 30px -10px #000;
+                        -moz-box-shadow: 20px 20px 30px -10px #000;
+                        box-shadow: 20px 20px 30px -10px #000;
+                        transition: all 150ms ease-out;
+                      }
                     }
-                  }
 
-                  .content {
-                    display: block;
-                    position: absolute;
-                    bottom: 11px;
-                    left: 10px;
-                    width: 91%;
-                    background: rgba(254, 235, 127, 0.9);
-                    border-top: 5px solid;
+                    .content {
+                      display: block;
+                      position: absolute;
+                      bottom: 11px;
+                      left: 10px;
+                      width: 91%;
+                      background: rgba(254, 235, 127, 0.9);
+                      border-top: 5px solid;
+                    }
                   }
                 }
               }
@@ -207,17 +218,53 @@
       @media (min-width: @mediumDesktopWidth) {
         .home-section {
 
+          .view-title {
+
+            .header {
+              font-size: 3em;
+            }
+          }
+
           .section-content {
 
-            .heroes.content {
+            .header {
+
+              .label {
+                font-size: 1.5em;
+              }
+
+              p {
+                font-size: 1.5em;
+              }
+            }
+
+            .content {
 
               .block {
 
-                .card:hover,
-                .card:focus {
+                .header {
+                  font-size: 2em;
+                }
 
-                  .content {
-                    width: 92%;
+                p {
+                  font-size: 1.5em;
+                }
+              }
+            }
+
+            .heroes.content {
+
+              .ui.page.grid {
+                padding: 0 12%;
+
+                .block {
+
+                  .card:hover,
+                  .card:focus {
+
+                    .content {
+                      width: 92%;
+                    }
                   }
                 }
               }
@@ -229,17 +276,60 @@
       @media (min-width: @largeDesktopWidth) {
         .home-section {
 
+          .view-title {
+
+            .header {
+              font-size: 3.5em;
+            }
+          }
+
           .section-content {
 
-            .heroes.content {
+            .header {
+
+              .label {
+                font-size: 2em;
+              }
+
+              p {
+                font-size: 2em;
+              }
+            }
+
+            .content {
 
               .block {
 
-                .card:hover,
-                .card:focus {
+                .header {
+                  font-size: 2.5em;
+                }
 
-                  .content {
-                    width: 93%;
+                .icon-wrapper {
+
+                  i.fa {
+                    font-size: 15em;
+                  }
+                }
+
+                p {
+                  font-size: 2em;
+                }
+              }
+            }
+
+            .heroes.content {
+
+              .ui.page.grid {
+                padding: 0 14%;
+
+                .block {
+
+                  .card:hover,
+                  .card:focus {
+
+                    .content {
+                      width: 93%;
+                    }
                   }
                 }
               }
@@ -251,12 +341,20 @@
       @media (max-width: @phoneWidth) {
         .home-section {
 
+          .view-title {
+
+            .header {
+              font-size: 2em;
+            }
+          }
+
           .section-content {
 
             .content {
 
               .block {
                 padding: 4% 0 !important;
+                width: 100%;
               }
             }
 
@@ -313,18 +411,31 @@
       @media (min-width: @phoneWidth) and (max-width: @tabletWidth) {
         .home-section {
 
+          .view-title {
+
+            .header {
+              font-size: 2.5em;
+            }
+          }
+
           .section-content {
 
             .heroes.content {
 
               .block {
                 padding: 4% !important;
+                width: 50%;
 
                 .card {
                   border: 5px solid;
                   -moz-box-shadow: 0 0 10px 0 #000;
                   -webkit-box-shadow: 0 0 10px 0 #000;
                   box-shadow: 0 0 10px 0 #000;
+                  transform: skew(-3deg);
+                  -o-transform: skew(-3deg);
+                  -moz-transform: skew(-3deg);
+                  -webkit-transform: skew(-3deg);
+                  -webkit-backface-visibility: hidden;
 
                   .image {
 
