--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -3,7 +3,7 @@
     <h1 class="huge center aligned ui footer">
       Do you want more traffic?
       <small>
-        Looks like a business in Astoria, New York needs our attention! Is this you?
+        Looks like a business in Astoria, New York<br/>needs our attention! Is this you?
       </small>
     </h1>
     <button class="basic ui resize icon button"><i class="{{iconClass}} icon"></i></button>
