polished styles and markup for home, added menu component

--- a/client/stylesheets/variables.less
+++ b/client/stylesheets/variables.less
@@ -12,6 +12,7 @@
 
 @voidBackground: #09050D;
 @contentBackground: #fff;
+@menuBackground: #ff995e;
 @labelBackground: #feeb7f;
 
 // Width variables
