--- a/client/stylesheets/topbar.less
+++ b/client/stylesheets/topbar.less
@@ -5,6 +5,120 @@
 
   .ui.topbar {
     background: rgba(9, 5, 13, 0.95);
+
+    .title {
+
+      b {
+        display: none;
+        color: @primaryIconColor;
+        font-size: 1.5em;
+
+        span {
+          position: relative;
+          top: 2px;
+          left: 3px;
+          color: rgba(255, 153, 94, 0.75);
+        }
+      }
+    }
+
+    .menu {
+
+      .icon {
+
+        i.fa {
+          color: @primaryIconColor;
+          font-size: 1.5em;
+        }
+      }
+
+      .icon:hover,
+      .icon:focus {
+        background: transparent;
+      }
+    }
   }
 
+  @media (min-width: @tabletWidth) {
+    .ui.topbar {
+      background: transparent;
+    }
+  }
+  @media (min-width: @mediumDesktopWidth) {
+    .ui.topbar {
+
+      .title {
+
+        b {
+          font-size: 2em;
+
+          span {
+            top: 3px;
+            left: 4px;
+          }
+        }
+      }
+
+      .menu {
+
+        .icon {
+
+          i.fa {
+            font-size: 2em;
+          }
+        }
+      }
+    }
+  }
+
+  @media (min-width: @largeDesktopWidth) {
+    .ui.topbar {
+
+      .title {
+
+        b {
+          font-size: 2.5em;
+
+          span {
+            top: 4px;
+            left: 5px;
+          }
+        }
+      }
+
+      .menu {
+
+        .icon {
+
+          i.fa {
+            font-size: 2.5em;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: @phoneWidth) {
+    .ui.topbar {
+      background: rgba(9, 5, 13, 0.95);
+    }
+  }
+
+  @media (min-width: @phoneWidth) and (max-width: @tabletWidth) {
+    .ui.topbar {
+      background: rgba(9, 5, 13, 0.95);
+    }
+  }
+}
+
+.layout.scrolled {
+  .ui.topbar {
+
+    .title {
+
+      b {
+        display: inline;
+      }
+    }
+  }
 }
