--- a/client/views/common/topbar.html
+++ b/client/views/common/topbar.html
@@ -1,11 +1,13 @@
 <template name="topbar">
   <div class="ui fixed inverted main topbar menu">
-    <div class="title item">
-      <b>+P</b>
+    <div class="animated fadeIn title item">
+      <b>
+        <span>+</span>P
+      </b>
     </div>
     <div class="right menu">
-      <a class="popup icon github item">
-        <i class="alternate github icon"></i>
+      <a class="popup icon item">
+        <i class="fa fa-bars"></i>
       </a>
     </div>
   </div>
