--- a/client/views/layouts/layout.html
+++ b/client/views/layouts/layout.html
@@ -2,6 +2,8 @@
   <main class="layout">
     {{> topbar}}
     {{> yield}}
-    {{> menu}}
+    {{#if menuShow}}
+      {{> menu}}
+    {{/if}}
   </main>
 </template>
