--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -486,11 +486,15 @@
           .background.image {
             background: url(/images/backgrounds/jupiter.png);
             background-size: inherit;
-            background-position: 15% 75%;
+            background-position: 15% 65%;
             background-repeat: no-repeat;
-            padding: 35vh 8% 50vh !important;
+            padding: 20vh 8% !important;
+            height: 100vh;
 
             .header {
+              position: relative;
+              bottom: 10vh;
+              left: 0;
               text-shadow: 1px 1px 1px #000;
 
               span {
@@ -514,11 +518,15 @@
           .background.image {
             background: url(/images/backgrounds/saturn.png);
             background-size: inherit;
-            background-position: 40% 75%;
+            background-position: 45% 75%;
             background-repeat: no-repeat;
-            padding: 35vh 8% 50vh !important;
+            padding: 10vh 8% !important;
+            height: 100vh;
 
             .header {
+              position: relative;
+              top: 5vh;
+              left: 0;
               color: @secondaryFontColor;
               text-shadow: 1px 1px 1px #000;
 
@@ -526,6 +534,70 @@
                 color: @primaryHeaderColor;
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+body.ui.dimmed {
+  overflow: hidden;
+
+  .ui.dimmer.page {
+    border: 6px solid @primaryFontColor;
+
+    .ui.modal {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      margin: 0 !important;
+      border-radius: 0;
+      border: 0px;
+      background-size: cover !important;
+      background-position: 100% 50%;
+      background-repeat: no-repeat;
+
+      .header {
+        padding: 0.5em;
+        background: rgba(254, 235, 127, 0.9);
+        border-radius: 0;
+        border-bottom: 6px solid @primaryFontColor;
+
+        h3 {
+          margin: 0;
+          font-size: 1em;
+
+          small {
+            font-size: 60%;
+            font-weight: normal;
+          }
+
+          .close.icon {
+            float: right;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .content {
+        position: absolute;
+        bottom: 6px;
+        left: 0;
+        padding: 1em;
+        background: rgba(254, 235, 127, 0.9);
+        border: 6px solid @primaryFontColor;
+        border-left: 0;
+        border-right: 0;
+
+        p {
+          margin: 0;
+          text-align: center;
+          font-size: 2em;
+
+          strong {
+            display: block;
           }
         }
       }
