--- a/client/views/home/sections/heroes/hero_modal.html
+++ b/client/views/home/sections/heroes/hero_modal.html
@@ -3,7 +3,7 @@
     <div class="header">
       <h3>
         {{name}} <small>{{title}}</small>
-        <i class="close right icon"></i>
+        <i class="close icon"></i>
       </h3>
     </div>
     <div class="content">
