styling for footer input action

--- a/client/stylesheets/footer.less
+++ b/client/stylesheets/footer.less
@@ -25,15 +25,18 @@
   }
 
   .ui.action.input {
-    padding: 0 6%;
+    width: 85%;
+    margin: 10% auto;
 
     input {
+      height: 3em;
       background: #FEEB7F;
       border: 0;
     }
 
     .ui.button {
       cursor: pointer;
+      height: 3em;
       padding: 5px;
       background: #FEEB7F;
       border: 0;
@@ -41,11 +44,12 @@
 
       p {
         margin: 0;
-        padding: 4.5px 10px;
+        padding: 5px 15px;
         background: #FEEB7F;
         border: 2px solid #3fb094;
         border-radius: 4px;
         color: #3fb094;
+        line-height: 1.5;
         font-size: 1em;
         font-weight: normal;
         text-transform: none;
