--- a/client/stylesheets/footer.less
+++ b/client/stylesheets/footer.less
@@ -12,21 +12,21 @@
 
   .huge.ui.header {
     margin: 0;
-    padding: 15vh 4% 5vh;
+    padding: 15vh 1em 5vh;
     color: #ff995e;
-    font-size: 1.2em;
+    font-size: 1.5em;
 
     > small {
       display: block;
-      margin-top: 4%;
+      margin-top: 1em;
       color: #feeb7f;
-      font-size: 65%;
+      font-size: 60%;
     }
   }
 
   .ui.action.input {
     width: 85%;
-    margin: 10% auto;
+    margin: 1em auto;
 
     input {
       height: 3em;
@@ -59,30 +59,42 @@
 
   @media (min-width: @tabletWidth) {
     .huge.ui.header {
-      font-size: 3em;
+      font-size: 2em;
     }
   }
   @media (min-width: @mediumDesktopWidth) {
     .huge.ui.header {
-      font-size: 3.5em;
+      font-size: 2.5em;
+
+      small {
+        font-size: 50%;
+      }
+    }
+
+    .ui.action.input {
+      width: 70%;
     }
   }
 
   @media (min-width: @largeDesktopWidth) {
+    .huge.ui.header {
+      font-size: 3em;
+    }
 
+    .ui.action.input {
+      width: 60%;
+    }
   }
 
   @media (max-width: @phoneWidth) {
     .huge.ui.header {
-      font-size: 1.2em;
-      padding: 15vh 4% 5vh;
+      font-size: 1.5em;
     }
   }
 
   @media (min-width: @phoneWidth) and (max-width: @tabletWidth) {
     .huge.ui.header {
-      font-size: 2.5em;
-      padding: 15vh 4% 5vh;
+      font-size: 2em;
     }
   }
 }
