--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -6,14 +6,6 @@
         Looks like a business in {{location}}<br/>needs our attention! Is this you?
       </small>
     </h1>
-    <div class="ui action input">
-      <input type="text" placeholder="you website url...">
-      <div class="ui button">
-        <p>Analyze</p>
-      </div>
-    </div>
-    {{#if showForm}}
-
-    {{/if}}
+    {{> footerWizard}}
   </footer>
 </template>
